--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h2>日本語</h2>
         <h1 id="ja">翻訳</h1>
         <h2>English</h2>
-        <h1 id="en">translation</h1>
+        <h1 id="en">Translation</h1>
         <script src="https://unpkg.com/glottologist"></script>
         <script type="text/javascript" src="js/main.js"></script>
     </body>
